# smithers

./: .gitignore  Justfile  README  README.md  pyproject.toml
.github/: FUNDING.yml
data/Python/: hello.py
data/bash/: hello.sh
docs/: USAGE.md  pandoc.md  smithers.md
docs/src/: _meta.md  commands.md  description.md  environment.md  examples.md  exit_status.md  files.md  help.txt.md  man.md  options.md  security.md  see_also.md  synopsis.md  usage.txt.md
scripts/: install.sh
src/smithers/: cli.py
src/smithers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/smithers/commands/: create.py  hello.py
tests/e2e/: test_install.py
tests/smoke/: smoke_test.py
tests/unit/commands/: create.test.py
